main.js file added. finished step 2 of initial js files

--- a/index.html
+++ b/index.html
@@ -35,5 +35,6 @@
       </tr>
     </tbody>
   </table>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"></script>
 </body>
 </html>
