--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
       </tr>
     </tbody>
   </table>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+  <script src="../student-grade-table/components/app.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
