--- a/index.html
+++ b/index.html
@@ -18,24 +18,16 @@
     </thead>
     <tbody>
       <tr>
-        <td scope="row">Tim Berners-Lee</td>
-        <td>Web Development</td>
-        <td>100</td>
       </tr>
       <tr>
-        <td scope="row">Scott Bowler</td>
-        <td>Web Development</td>
-        <td>100</td>
       </tr>
       <tr>
-        <td scope="row">Tim Davis</td>
-        <td>Web Development</td>
-        <td>50</td>
       </tr>
     </tbody>
   </table>
   <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
   <script src="../student-grade-table/components/app.js"></script>
+  <script src="../student-grade-table/components/grade-table.js"></script>
   <script src="main.js"></script>
 </body>
 </html>
