completed add a pageHeader component

--- a/index.html
+++ b/index.html
@@ -17,17 +17,12 @@
       </tr>
     </thead>
     <tbody>
-      <tr>
-      </tr>
-      <tr>
-      </tr>
-      <tr>
-      </tr>
     </tbody>
   </table>
   <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
   <script src="../student-grade-table/components/app.js"></script>
   <script src="../student-grade-table/components/grade-table.js"></script>
+  <script src="../student-grade-table/components/page-header.js"></script>
   <script src="main.js"></script>
 </body>
 </html>
