--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Student Grade Table</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css">
 </head>
 <body>
-  <header>Student Grade Table</header>
+  <header class="row align-items-end mt-4 mb-4">
+    <h1>Student Grade Table</h1>
+    <h4 class="col text-right">Average Grade <span class="badge badge-primary"></span></h4>
+    </header>
   <table class="table">
     <thead>
       <tr>
