--- a/index.html
+++ b/index.html
@@ -6,23 +6,28 @@
   <title>Student Grade Table</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
 </head>
 <body>
   <header class="row align-items-end mt-4 mb-4">
     <h1>Student Grade Table</h1>
     <h4 class="col text-right">Average Grade <span class="badge badge-primary"></span></h4>
-    </header>
-  <table class="table">
-    <thead>
-      <tr>
-        <th scope="col">Student Name</th>
-        <th scope="col">Course</th>
-        <th scope="col">Grade</th>
-      </tr>
-    </thead>
-    <tbody>
-    </tbody>
-  </table>
+  </header>
+  <div>
+    <table class="table col-8">
+      <thead>
+        <tr>
+          <th scope="col">Student Name</th>
+          <th scope="col">Course</th>
+          <th scope="col">Grade</th>
+        </tr>
+      </thead>
+      <tbody>
+      </tbody>
+      </table>
+
+      <div class="col-4"></div>
+    </div>
   <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
   <script src="../student-grade-table/components/app.js"></script>
   <script src="../student-grade-table/components/grade-table.js"></script>
