--- a/index.html
+++ b/index.html
@@ -26,8 +26,32 @@
       </tbody>
       </table>
 
-      <div class="col-4"></div>
+    <div class="col-4">
+      <form class=" pr-0">
+        <div class="input-group mb-3">
+          <div class="input-group-prepend">
+            <span class="input-group-text"><i class="fas fa-user"></i></span>
+          </div>
+          <input type="text" class="form-control" placeholder="Student Name" aria-label="Student's Name">
+        </div>
+        <div class="input-group mb-3">
+          <div class="input-group-prepend">
+            <span class="input-group-text"><i class="far fa-list-alt"></i></span>
+          </div>
+          <input type="text" class="form-control" placeholder="Student Course" aria-label="Student's Course">
+        </div>
+        <div class="input-group mb-3">
+          <div class="input-group-prepend">
+            <span class="input-group-text"><i class="fas fa-graduation-cap"></i></span>
+          </div>
+          <input type="number" class="form-control" placeholder="Student Grade" aria-label="Student's Grade">
+        </div>
+        <button type="submit" class="btn btn-success mr-2">Add</button>
+        <button type="reset" class="btn btn-outline-secondary">Cancel</button>
+      </form>
     </div>
+
+  </div>
   <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
   <script src="../student-grade-table/components/app.js"></script>
   <script src="../student-grade-table/components/grade-table.js"></script>
