--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
   <script src="../student-grade-table/components/app.js"></script>
   <script src="../student-grade-table/components/grade-table.js"></script>
   <script src="../student-grade-table/components/page-header.js"></script>
+  <script src="../student-grade-table/components/grade-form.js"></script>
   <script src="main.js"></script>
 </body>
 </html>
