--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
           <th scope="col">Student Name</th>
           <th scope="col">Course</th>
           <th scope="col">Grade</th>
+          <th scope="col">Operations</th>
         </tr>
       </thead>
       <tbody>
       </tbody>
       </table>
+    <p class="d-none">No Grades Recorded</p>
 
     <div class="col-4">
       <form class=" pr-0">
